compiler/testData/cli/jvm/optIn/useDeclarationThatWasExperimentalWithoutMarker.kt
fun test() {
    Regex("").matchAt("123", 0)
}